fixed overlapping

--- a/public/css/filters_tax.css
+++ b/public/css/filters_tax.css
@@ -2,14 +2,13 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        padding-top: 1.5rem;
         
     }
 
     .filter{
         text-align: center;
         margin-right: 2rem;
-        /* margin-top: 2rem; */
+        margin-top: 2rem;
         opacity: 0.7;
     }
     .filter:hover{
@@ -28,7 +27,7 @@
         display: none;
     }
 
-    /* .tax-toggle{
+    .tax-toggle{
         border: 1px solid black;
         border-radius: 1rem;
         height: 3.25rem;
@@ -36,22 +35,6 @@
         margin-left: 2rem;
         display: flex;
         align-items: center;
-    } */
-
-    .tax-toggle{
-    border: 1px solid black;
-    border-radius: 1rem;
-    height: 3.25rem;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
     }
 
 
-
-@media (max-width: 767px) {
-  .tax-toggle {
-    margin-left: 0;
-    width: 100%;
-  }
-}
